# cmake_tutorial

./: README.md  cmake_tutorial.txt  gitHub_tutorial.txt  links.txt
adding_compileTime_flag/: CMakeLists.txt  tutorial.cxx
effective_cmake/: CMakeLists.txt  main.cxx  main.h
enviornment_variable_read/: CMakeLists.txt
external_build/: CMakeLists.txt  main.cxx  readMe.txt
external_build/externalBuild/: common.h  test_dll.lib
windows_app/: CMakeLists.txt  main.cxx
